Changes
=======

1.1 (unreleased)
----------------

* ...

1.0 (2008-09-25)
----------------

* Created ``grokcore.formlib`` in July 2008 by factoring
  ``zope.formlib``-based components, grokkers and directives out of
  Grok.