@@ -4,7 +4,8 @@ Changes
 1.1 (unreleased)
 ----------------
 
-* ...
+* Have GrokForm define an empty actions attribute by default, in order
+  for "action-less" forms to work easily.
 
 1.0 (2008-09-25)
 ----------------
